@@ -1,11 +1,12 @@
 --- #YAML:1.0
 name: graph-perl-usage
-version: 0.03
+abstract: graph Perl Package usage
+version: 0.04
 version_from: gen_graph
 license: gpl
 distribution_type: module
-generated_by: graph-perl-usage version 0.03
+generated_by: graph-perl-usage version 0.04
 installdirs: site
 requires:
   Graph: 0.65
-  Graph::Easy: 0.21
+  Graph::Easy: 0.22
