@@ -13,22 +13,24 @@ not run its Makefile.PL or Build.PL.
 
 -----BEGIN PGP SIGNED MESSAGE-----
 
-SHA1 298651e6f9ab30b06755c507c76af9a2ec447ffd CHANGES
+SHA1 156fed5b8df55b6200c02bfea64b1e2a229fda2d CHANGES
 SHA1 02154445bc9831e791c35050f1a018ed99030016 LICENSE
-SHA1 e2f5987b777ba7b5ebbbc0b64d6601bdb8daf544 MANIFEST
-SHA1 c5ec6be96d93562cd41fb4cf1951ad7268226d30 META.yml
-SHA1 1b66f97426576b6198b93d3d11a06963ad75a695 Makefile.PL
-SHA1 10d982864ac30a1d0c9e8206f7b54d98d30a55f4 TODO
-SHA1 514c1ea70c01ab8c88debd029a8b1610f8936f81 gen_graph
-SHA1 2e1360a74b279567a8a626de42de221618dc20c2 t/gen_graph.t
+SHA1 54f77560a26e263a1f1eff76e04a8a98cc82ea42 MANIFEST
+SHA1 5c83cc861a661d0f446464e1fe5aa86a88ef95aa META.yml
+SHA1 5629bfdabebea1f842b71c4f06cec8424ccd3deb Makefile.PL
+SHA1 fe172baa279f52b75432a4dc16d760bbff132cab TODO
+SHA1 8b3a6eb9df82228c8a7c2d1dc3133d1bb18b9109 gen_graph
+SHA1 2f294ef54d888f570fb7b10697f8978dc0b54ac2 t/00_basic.t
+SHA1 f1135b4e5ddf2ecab93188c3e1efd58d512965b2 t/01_html.t
+SHA1 04355f4e8ef11c55f446a6f8f3c47d75c4bba971 t/lib/Test.pm
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.2.4 (GNU/Linux)
 
-iQEVAwUBQtEcw3cLPEOTuEwVAQFErQf+L/A5YMtRssVL2mhXUR4Pgv9eJt4ACzeN
-w3hLL174XT9oS5ZtTuvKE8WrvHNOnKs1z4Zp6DX6vZ/joT6NQidEB4rWh58qS4PC
-hnvGz8YAR1123wM1euCatalEiRgjtBzs9O0WCrCzCx3eYns9Le0CkoeUvNTHywqB
-0U8f7todPKJWlWsHBzK33ayfnVWL4GSqlm6qL7tv8GcrpvCeeTXfrA5U+JLPMolT
-GkWYWymxumqRZdjuNYzk7/Ej5W2/Od2kpXXhQdRkrHnZsh0yDaxr38KvjuCy64T7
-k58Ftme0DuUaWevqxJBpShqNxuPDGB8tHlvGuVsaSA9vYxemfA6f/A==
-=6O5+
+iQEVAwUBQtVU+ncLPEOTuEwVAQG5pAf9GkRb4CIqHUjAXkW6pEsNL+J5sA9aOpdE
+L2MCZjeGnHm+1NRKs/wpyVJBofpA6nxLKfgnnrL5xS0Y4PuZ36xwCuPGeik3T1GF
+cJZrerkdanWlh+/uhx9sKR7sfjswIJ9yW5T6P3KTNK6z9miFAqI3mHLvgWJ0BoMr
+l+F6CTSMi/gnaDndYp1v1cjdm2XlvPW+k43KuURMWtfGgbxChXkLAiDkmu80+skP
+W992a/KmPI0F+y3UQwM6hjY0DLFdVyp8ZdPaDdEbvk2/0aCsEm2UcOKrj76jGypG
+GsY/lDWEbcpBSEPhWHwUOqakEYksIh6Zp0zqT24SG0Q0kbAl+r+XBw==
+=iaAi
 -----END PGP SIGNATURE-----
