@@ -9,9 +9,13 @@ BEGIN
    chdir 't' if -d 't';
    };
 
+my $gen = '../';
+$gen = 'perl ..\\' if $^O =~ /MSWin32/i;
+$gen .= 'gen_graph';
+
 #############################################################################
 # --version
-my $rc = `../gen_graph --version`;
+my $rc = `$gen --version`;
 
 like ($rc, qr/v\d\.\d\d/, 'version found');
 unlike ($rc, qr/Usage/, 'no help in --version');
@@ -19,7 +23,7 @@ unlike ($rc, qr/Usage/, 'no help in --version');
 #############################################################################
 # --help
 
-$rc = `../gen_graph --help 2>&1`;
+$rc = `$gen --help 2>&1`;
 
 like ($rc, qr/v\d\.\d\d/, 'version found');
 like ($rc, qr/Usage:/, 'help found');
@@ -28,7 +32,7 @@ like ($rc, qr/Options:/, 'help found');
 #############################################################################
 # --debug
 
-$rc = `../gen_graph --debug --version 2>&1`;
+$rc = `$gen --debug --version 2>&1`;
 
 like ($rc, qr/v\d\.\d\d/, 'version found');
 
